test/trivial/bradc/entrypoint/wrongmain2.good
error: main() function with invalid signature
wrongmain2.chpl:4: note: in module wrongmain2
